[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Textures/BlackBackDrop.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Rubik/Rubik-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GameObjects/Tiles/LeverTile/Texture/LeverTexture.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/Rubik/Rubik-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Components/PausePanel/PausePanel.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 45
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 18
outline_size = 1
font_data = ExtResource( 4 )

[node name="PausePanel" type="CanvasLayer"]
pause_mode = 2
layer = 10
script = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Backdrop" type="TextureRect" parent="Control"]
modulate = Color( 1, 1, 1, 0.54902 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -111.0
margin_right = 128.0
margin_bottom = 111.0
custom_constants/separation = 7
alignment = 1

[node name="Label" type="Label" parent="Control/VBoxContainer"]
margin_right = 256.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
text = "PAUSED"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Control/VBoxContainer"]
margin_top = 62.0
margin_right = 256.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 3 )
text = "Press Space to Resume"
align = 1
valign = 1

[node name="Unpause" type="Button" parent="Control/VBoxContainer"]
margin_top = 88.0
margin_right = 256.0
margin_bottom = 128.0
rect_min_size = Vector2( 256, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="Control/VBoxContainer/Unpause"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
patch_margin_left = 6
patch_margin_top = 8
patch_margin_right = 6
patch_margin_bottom = 10

[node name="Label" type="Label" parent="Control/VBoxContainer/Unpause/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Resume"
align = 1
valign = 1

[node name="MapButton" type="Button" parent="Control/VBoxContainer"]
margin_top = 135.0
margin_right = 256.0
margin_bottom = 175.0
rect_min_size = Vector2( 256, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="Control/VBoxContainer/MapButton"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
patch_margin_left = 6
patch_margin_top = 8
patch_margin_right = 6
patch_margin_bottom = 10

[node name="Label" type="Label" parent="Control/VBoxContainer/MapButton/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Return to Map"
align = 1
valign = 1

[node name="MainMenuButton" type="Button" parent="Control/VBoxContainer"]
margin_top = 182.0
margin_right = 256.0
margin_bottom = 222.0
rect_min_size = Vector2( 256, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="Control/VBoxContainer/MainMenuButton"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
patch_margin_left = 6
patch_margin_top = 8
patch_margin_right = 6
patch_margin_bottom = 10

[node name="Label" type="Label" parent="Control/VBoxContainer/MainMenuButton/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Return to Main Menu"
align = 1
valign = 1

[connection signal="pressed" from="Control/VBoxContainer/Unpause" to="." method="_on_Unpause_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/MapButton" to="." method="_on_MapButton_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
